--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,9 @@ add_subdirectory(frontend_mcm)
     add_subdirectory(vpux_plugin/preproc_gapi)
 #endif()
 
+if(ENABLE_EMULATOR)
+    add_subdirectory(emulator_backend)
+endif()
 if(ENABLE_HDDL2)
     add_subdirectory(hddl2_backend)
 endif()
