--- a/src/emulator_backend/CMakeLists.txt
+++ b/src/emulator_backend/CMakeLists.txt
@@ -14,20 +14,19 @@
 # stated in the License.
 #
 
-if(ENABLE_LTO)
-   ie_enable_lto()
-endif()
+#if(ENABLE_LTO)
+#    ie_enable_lto()
+#endif()
 
-set(TARGET_NAME "vpual_backend")
-set(OBJ_TARGET_NAME "vpual_backend_obj")
-set(STATIC_TARGET_NAME "vpual_backend_static")
+set(TARGET_NAME "emulator_backend")
+set(OBJ_TARGET_NAME "emulator_backend_obj")
 
 file(GLOB_RECURSE SOURCES *.cpp *.hpp *.h)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
 add_library(${OBJ_TARGET_NAME} OBJECT ${SOURCES})
-
-enable_warnings_as_errors(${OBJ_TARGET_NAME})
+# FIXME: enable once MCMCompiler respects warning as errors
+# enable_warnings_as_errors(${OBJ_TARGET_NAME})
 
 target_compile_definitions(${OBJ_TARGET_NAME}
     PRIVATE
@@ -35,13 +34,10 @@ target_compile_definitions(${OBJ_TARGET_NAME}
 
 target_include_directories(${OBJ_TARGET_NAME}
     PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/include")
 
 link_system_libraries(${OBJ_TARGET_NAME}
-    PUBLIC
-        ${VPUAL_NN_LIBRARY}
-        ${VPUMGR_LIBRARY}
     PRIVATE
         IE::inference_engine
         IE::inference_engine_plugin_api
@@ -50,15 +46,11 @@ target_link_libraries(${OBJ_TARGET_NAME}
     PRIVATE
         vpux_al
         kmb_utils
+        flatbuffers
         mcmCompiler)
 
 add_library(${TARGET_NAME} MODULE $<TARGET_OBJECTS:${OBJ_TARGET_NAME}>)
 target_link_libraries(${TARGET_NAME} PRIVATE ${OBJ_TARGET_NAME})
-
-if (ENABLE_TESTS)
-    add_library(${STATIC_TARGET_NAME} STATIC $<TARGET_OBJECTS:${OBJ_TARGET_NAME}>)
-    target_link_libraries(${STATIC_TARGET_NAME} PUBLIC ${OBJ_TARGET_NAME})
-endif()
 
 if(ENABLE_CLANG_FORMAT)
     add_clang_format_target(clang_format_${TARGET_NAME} FOR_TARGETS ${TARGET_NAME} ALL)
