--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "thirdparty/bitcompactor"]
 	path = thirdparty/bitcompactor
 	url = ../../movidius/btc_models.git
+[submodule "mcm-emulator"]
+	path = src/mcmCompiler/contrib/mcm-emulator
+	url = ssh://git@gitlab-icv.inn.intel.com/kmb-emulator/mcm-emulator.git
