Enabling UPA LeakyRelu for SuperResolution "
Adding UPA LeakyRelu to target runtime-model
Adding PPE Replacement for UPA LeakyRelu

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -30,6 +30,7 @@
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
             "ImplicitOutputDTypeUpdate",
+            "DeQuantizeU8ConstToFP16Const",
             "KMBQuantizeConversion",
             "ConfigureOutputPrecision",
             "FuseConcats",
