--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
@@ -28,6 +28,7 @@
             "RemoveBiasTensors",
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
+            "DeQuantizeU8ConstToFP16Const",
             "KMBQuantizeConversion",
             "ConfigureOutputPrecision",
             "FuseConcats",
