--- a/tools/test_classification/CMakeLists.txt
+++ b/tools/test_classification/CMakeLists.txt
@@ -14,10 +14,9 @@
 
 set(TARGET_NAME test_classification)
 
-find_package(OpenCV QUIET COMPONENTS core imgproc imgcodecs)
 find_package(gflags QUIET)
 
-if(NOT OpenCV_FOUND OR NOT gflags_FOUND)
+if(NOT gflags_FOUND)
     message(WARNING "${TARGET_NAME} tool is disabled due to missing dependencies")
     return()
 endif()
@@ -26,7 +25,6 @@ add_executable(${TARGET_NAME} main.cpp)
 
 target_link_libraries(${TARGET_NAME} PRIVATE
     IE::inference_engine IE::ngraph IE::format_reader
-    opencv_core opencv_imgproc opencv_imgcodecs
     gflags
     kmb_utils
 )
