[MLIR] Update LLVM/MLIR submodule to latest upstream state
Adjust `vpux_compiler` code:

* Use `memref` dialect.
* Fix generated type parser usage.

--- a/src/vpux_compiler/CMakeLists.txt
+++ b/src/vpux_compiler/CMakeLists.txt
@@ -255,13 +255,13 @@ link_system_libraries(${OBJ_TARGET_NAME}
         MLIRIR
         MLIROptLib
         MLIRPass
-        MLIRQuant
         MLIRStandard
-        MLIRTransforms
-        MLIRTranslation
-        MLIRStandardOpsTransforms
+        MLIRMemRef
+        MLIRQuant
         MLIRLinalg
-        MLIRShape
+        MLIRTransforms
+        MLIRStandardOpsTransforms
+        MLIRTranslation
         flatbuffers
         IE::ngraph
         IE::inference_engine
