--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -142,7 +142,9 @@
                     "globalConfigs" : [
                         {"name" : "createStrategyDots", "value" : false},
                         {"name" : "dotFileLocation", "value" : "./output/dots/strategy/"},
-                        {"name" : "jsonOutFileName", "value" : "./output/mcmCompiler_strategy_output.json"}
+                        {"name" : "jsonOutFileName", "value" : "./output/mcmCompiler_strategy_output.json"},
+                        {"name" : "loadStrategiesFromFile", "value" : false},
+                        {"name" : "jsonInFileName", "value" : "./output/mcmCompiler_strategy_output.json"}
                     ],
                     "globalStrategies" : [
                         {"name" : "forceSpilling",    "value" : false       },
