Add pass for optimizing Task input barriers

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -200,6 +200,7 @@
     "serialize": {
         "Singular": [
             "RemoveRedundantUpdateBarriers",
+            "CombineTaskInputBarriers",
             "SplitBarrier",
             {
                 "name" : "AssignPhysicalBarrier",
