--- a/src/mcmCompiler/config/compilation/release_kmb_B0.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_B0.json
@@ -29,6 +29,7 @@
                 "enablePrefetching": true,
                 "enableWeightsSparsity": true,
                 "enableStaticBarriers": true,
+                "enableSplitBarriers" : false,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
