--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -12,7 +12,6 @@
             },
             "AssignInputNode",
             "AssignOutputNode",
-            "DecideComputePrecision",
             "AssignUniqueOpId",
             {
                 "name": "ApplyTargetVars",
@@ -166,6 +165,7 @@
             "ResolveImplicitOperations",
             "AddDPUTasksWeightsDMATasks",
             "AddUPATasksExtraInputsDMATasks",
+            "CleanRedundantDMAs",
             "EnsureSplitStrategiesForSpilling"
         ]
     },
