Fix warnings reported by new CMake version
* `CMP0115` (Source file extensions must be explicit).
  Use `NEW` behavior and fix mcmCompiler sources list.
* `CMP0116` (Ninja generators transform `DEPFILE` s from `add_custom_command()`).
  Use `OLD` behavior, since LLVM CMake scripts relies on it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@
 # Project properties
 #
 
+set(CMAKE_POLICY_DEFAULT_CMP0115 NEW)
+set(CMAKE_POLICY_DEFAULT_CMP0116 OLD)
+
 cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 
 # Honor <LANG>_VISIBILITY_PRESET for all target types (including static libraries).
