Remove hddlunite for Windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,7 +28,7 @@ add_subdirectory(frontend_mcm)
 if(ENABLE_EMULATOR)
     add_subdirectory(emulator_backend)
 endif()
-if(ENABLE_HDDL2)
+if(ENABLE_HDDL2 AND UNIX)
     add_subdirectory(hddl2_backend)
 endif()
 if(ENABLE_ZEROAPI_BACKEND)
