[MLIR] Introduce DeallocPlacement pass to core part
It works with multi-view operations in contrast to the analogure from core MLIR.

Move `ComposeSubView` pass to core part too.

--- a/src/vpux_compiler/CMakeLists.txt
+++ b/src/vpux_compiler/CMakeLists.txt
@@ -177,6 +177,7 @@ macro(add_rewriters subdir)
 endmacro()
 
 add_op_interfaces("core")
+add_passes("core" "Core")
 
 add_dialect("IE")
 add_enum_attrs("IE")
