Yingyue/fp32 multi input conversion fix

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -12,6 +12,7 @@
             },
             "AssignInputNode",
             "AssignOutputNode",
+            "DecideComputePrecision",
             "AssignUniqueOpId",
             {
                 "name": "ApplyTargetVars",
