[MLIR] Add Async Dialect as a dependency for IERT Dialect

--- a/src/vpux_compiler/CMakeLists.txt
+++ b/src/vpux_compiler/CMakeLists.txt
@@ -290,6 +290,7 @@ link_system_libraries(${OBJ_TARGET_NAME}
         MLIRMemRef
         MLIRQuant
         MLIRLinalg
+        MLIRAsync
         MLIRTransforms
         MLIRStandardOpsTransforms
         MLIRTranslation
