Switch LLVM/MLIR submodule to GitHub public fork
Use absolute URLs for the rest submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "thirdparty/gapi_sipp"]
 	path = thirdparty/gapi_sipp
-	url = ../../G-API/g-api-vpu.git
+	url = ssh://git@gitlab-icv.inn.intel.com/G-API/g-api-vpu.git
 [submodule "thirdparty/flatbuffers"]
 	path = thirdparty/flatbuffers
 	url = https://github.com/google/flatbuffers.git
 [submodule "thirdparty/graphFile-schema"]
 	path = thirdparty/graphFile-schema
-	url = ../../movidius/graphFile-schema.git
+	url = ssh://git@gitlab-icv.inn.intel.com/movidius/graphFile-schema.git
 [submodule "thirdparty/llvm-project"]
 	path = thirdparty/llvm-project
-	url = ../llvm-project.git
+	url = https://github.com/plaidml/llvm-project.git
 [submodule "thirdparty/bitcompactor"]
 	path = thirdparty/bitcompactor
-	url = ../../movidius/btc_models.git
+	url = ssh://git@gitlab-icv.inn.intel.com/movidius/btc_models.git
 [submodule "mcm-emulator"]
 	path = src/mcmCompiler/contrib/mcm-emulator
 	url = ssh://git@gitlab-icv.inn.intel.com/kmb-emulator/mcm-emulator.git
 [submodule "thirdparty/hddlunite"]
 	path = thirdparty/hddlunite
-	url = ../../movidius/hddlunite.git
+	url = ssh://git@gitlab-icv.inn.intel.com/movidius/hddlunite.git
