--- a/src/mcmCompiler/config/compilation/release_kmb.json
+++ b/src/mcmCompiler/config/compilation/release_kmb.json
@@ -29,6 +29,7 @@
                 "enablePrefetching": true,
                 "enableStaticBarriers": true,
                 "enableSplitBarriers" : true,
+                "enableSparsityA0" : true,
                 "enableWeightsSparsity": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
