[IE VPUX][MLIR] Add UseUserLayoutPass and tests

--- a/src/vpux_compiler/CMakeLists.txt
+++ b/src/vpux_compiler/CMakeLists.txt
@@ -187,6 +187,7 @@ add_rewriters("dialect/IE")
 
 add_dialect("IERT")
 add_passes("dialect/IERT" "IERT")
+add_rewriters("dialect/IERT")
 
 add_dialect("VPUIP")
 add_op_interfaces("dialect/VPUIP")
