Added inference_engine_plugin_api for utils target for propagate TBB includes

--- a/src/vpux_utils/CMakeLists.txt
+++ b/src/vpux_utils/CMakeLists.txt
@@ -40,6 +40,8 @@ target_include_directories(${TARGET_NAME}
 )
 
 link_system_libraries(${TARGET_NAME}
+    PRIVATE
+        IE::inference_engine_plugin_api
     PUBLIC
         IE::inference_engine
         IE::ngraph
