--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -43,6 +43,7 @@ target_include_directories(${TARGET_NAME}
 link_system_libraries(${TARGET_NAME}
     PRIVATE
         ${VPUMGR_LIBRARY}
+        IE::inference_engine_plugin_api
     PUBLIC
         IE::inference_engine_legacy
         IE::vpu_common_lib
