EISW-9594: Integrate PlaidML into kmb-plugin
* Add thirdparty/plaidml as a submodule dependency.
* Update LLVM pointer to include required plaidml patches.
* Register plaidml conversions, dialects, and passes with the vpux-opt tool.
* Include lit test to prove registration and prevent dependency regressions.
* When using cmake's file(GLOB), it's best to use CONFIGURE_DEPENDS to ensure cmake is re-configured when the glob result changes (e.g. tests are added, removed, or renamed).

--- a/cmake/lit.site.cfg.py.in
+++ b/cmake/lit.site.cfg.py.in
@@ -25,6 +25,7 @@ config.bin_dir = path('../..')
 config.bin_dir = config.bin_dir % lit_config.params
 
 config.lit_tools_dir = ''
+config.enable_plaidml = @ENABLE_PLAIDML_BOOL@
 
 @EXTRA_SUBSTITUTIONS@
 
