--- a/cmake/lit.site.cfg.py.in
+++ b/cmake/lit.site.cfg.py.in
@@ -1,5 +1,5 @@
 #
-# Copyright 2020 Intel Corporation.
+# Copyright Intel Corporation.
 #
 # This software and the related documents are Intel copyrighted materials,
 # and your use of them is governed by the express license under which they
@@ -25,7 +25,6 @@ config.bin_dir = path('../..')
 config.bin_dir = config.bin_dir % lit_config.params
 
 config.lit_tools_dir = ''
-config.enable_plaidml = @ENABLE_PLAIDML_BOOL@
 
 @EXTRA_SUBSTITUTIONS@
 
