[MLIR] Fix LIT tests issue under Windows
* Extract config variables declaration from `SUBSTITUTIONS` (`VARS` parameter).
* Add `has_plaidml` to `VARS`, but not to `SUBSTITUTIONS`.

--- a/cmake/lit.site.cfg.py.in
+++ b/cmake/lit.site.cfg.py.in
@@ -20,11 +20,10 @@ import lit.llvm
 
 config.name = '@TEST_NAME@'
 config.suffixes = [@SUFFIXES@]
-
 config.bin_dir = path('../..')
-config.bin_dir = config.bin_dir % lit_config.params
-
 config.lit_tools_dir = ''
+
+@EXTRA_DECLARATIONS@
 
 @EXTRA_SUBSTITUTIONS@
 
