no in place eltwise

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -60,7 +60,7 @@
               "ddr_address_generation" : true,
               "no_temporal_edges" : true,
               "enable_cmx_concat" : true,
-              "enable_inplace_eltwise" : true
+              "enable_inplace_eltwise" : false
             },
             "AssignSEBasePtr",
             {
