Extend FuseConcats pass, fusing addl back-to-back implicit ops

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -34,7 +34,7 @@
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
             "DeQuantizeU8ConstToFP16Const",
-            "FuseConcats"
+            "FuseImplicits"
         ]
     },
     "finalize": {
