--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
@@ -32,7 +32,7 @@
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
             "DeQuantizeU8ConstToFP16Const",
-            "FuseConcats"
+            "FuseImplicits"
         ]
     },
     "finalize": {
