--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -266,7 +266,7 @@
             "StrategyLayersToTensors",
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
-            "FuseConcats"
+            "FuseImplicits"
         ]
     },
   "dma": {
