--- a/src/mcmCompiler/config/compilation/release_mtl.json
+++ b/src/mcmCompiler/config/compilation/release_mtl.json
@@ -272,7 +272,7 @@
             "StrategyLayersToTensors",
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
-            "FuseConcats"
+            "FuseImplicits"
         ]
     },
   "dma": {
