EISW-11350 Add json parser for rtl-cases-generator parser
Signed-off-by: Meenakshi Venkataraman <meenakshi.venkataraman@intel.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(vpux_plugin)
 
 add_subdirectory(vpux_utils)
 add_subdirectory(vpux_compiler)
+add_subdirectory(vpux_translate_utils)
