Implementation of linearization pass.

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -273,6 +273,7 @@ set(pass
 
     "${PROJECT_SOURCE_DIR}/src/pass/scheduling/scheduling_passes.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/scheduling/layout_dma.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/scheduling/linearization.cpp"
 
     "${PROJECT_SOURCE_DIR}/src/pass/serialization/generate_blob_kmb.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/serialization/physical_barrier_pass.cpp"
