--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -191,6 +191,7 @@
     },
     "scheduling": {
         "Singular": [
+            "Linearization",
             {
               "name" : "BarrierSchedulerPass",
               "real_physical_barriers": 32,
