--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -350,6 +350,7 @@
     },
     "scheduling": {
         "Singular": [
+            "Linearization",
             {
               "name" : "BarrierSchedulerPass",
               "real_physical_barriers": 8,
