--- a/src/mcmCompiler/config/compilation/release_mtl.json
+++ b/src/mcmCompiler/config/compilation/release_mtl.json
@@ -349,6 +349,7 @@
     },
     "scheduling": {
         "Singular": [
+            "Linearization",
             {
               "name" : "BarrierSchedulerPass",
               "real_physical_barriers": 16,
