Introduce check for height kernel size when SOH
Enable the same blob to be generated on different machines and OS

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -44,6 +44,7 @@
             {
               "name" : "LocateInplaceEltwiseOps"
             },
+            "UPATaskChainScheduleHandling",
             {
                  "name" : "ChainPipeliningTransform",
                  "select_stages" : 2,
