[MLIR] Add IE PostOp attribute and MultiLayerInterface
The interface is used for operation that support post-processing:

* Convolution
* MaxPool

--- a/src/vpux_compiler/CMakeLists.txt
+++ b/src/vpux_compiler/CMakeLists.txt
@@ -240,6 +240,7 @@ add_attr_interfaces("dialect/const")
 add_attributes("const")
 
 add_dialect("IE")
+add_op_interfaces("dialect/IE")
 add_enum_attrs("IE")
 add_struct_attrs("IE")
 add_passes("dialect/IE" "IE")
