--- a/src/custom_extension_library/CMakeLists.txt
+++ b/src/custom_extension_library/CMakeLists.txt
@@ -11,3 +11,7 @@ add_library(${TARGET_NAME} SHARED ${SRC})
 target_compile_definitions(${TARGET_NAME} PRIVATE IMPLEMENT_INFERENCE_EXTENSION_API)
 
 link_system_libraries(${TARGET_NAME} PUBLIC IE::ngraph IE::inference_engine)
+
+install(TARGETS ${TARGET_NAME}
+        LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT tests EXCLUDE_FROM_ALL
+        RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT tests EXCLUDE_FROM_ALL)
