Install mcm_configs

--- a/tests/functional/CMakeLists.txt
+++ b/tests/functional/CMakeLists.txt
@@ -40,3 +40,8 @@ addIeTargetTest(
     LABELS
         KMB
 )
+
+install(DIRECTORY "${InferenceEngineVPUXPlugin_SOURCE_DIR}/src/mcmCompiler/config/"
+        DESTINATION ${IE_CPACK_RUNTIME_PATH}/mcm_config
+        COMPONENT tests
+        EXCLUDE_FROM_ALL)
